fix: AI 연동 계약과 운영 진단 보강